# myplayer

./: .clang-format  .clang-tidy  1-10_DaysPlan.md  CMakeLists.txt  CMake_Guide.md  CODE_STYLE.md  Command_Line_Guide.md  README.md  plan.md
.codex/skills/code-quality-coach/: SKILL.md
.codex/skills/code-quality-coach/agents/: openai.yaml
.codex/skills/code-quality-coach/references/: architecture-and-coupling.md  cpp-beginner-habits.md  design-rubric.md  general-rubric.md
.codex/skills/review-changes/: SKILL.md
.codex/skills/review-changes/scripts/: make_diff.ps1
app/: main.cpp
core/: dummy.cpp  dummy.h
scripts/: sync_codex_skill.ps1
